# gkm-cad

./: CMakeLists.txt  README.md
doc/: code_style.md  code_style_convention.md
include/gkm-cad/: vec4d.h
include/gkm_cad/: brep.h  curve_2d.h  curve_3d.h  edge_2d.h  edge_3d.h  face.h  shell.h  surface.h  vec2.h  vec4.h  vertex.h
src/: main.cpp
